--- a/config.json
+++ b/config.json
@@ -2,6 +2,7 @@
     "database": {
         "host": "127.0.0.1",
         "user": "root",
-        "password": ""
+        "password": "",
+        "database": "physics_teacher_simulator"
     }
 }
